Get available rooms
Header, book now button are ready
(fix button book and create file room_details)

--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -59,7 +59,7 @@ body {
 .icon-pen:before {
     content: "\e908";
 }
-.icon-blog:before {
+.icon-services:before {
     content: "\e909";
 }
 .icon-eyedropper:before {
