--- a/css/style.css
+++ b/css/style.css
@@ -604,7 +604,7 @@ button {
 /** services section **/
 
 .services {
-     background: url(../images/services_bg.jpg);
+     background: url(../images/wellness.jpg);
      background-repeat: no-repeat;
      background-size: 100% 100%;
      padding: 60px 0 30px 0;
